# ChangeLog for app-shells/ksh
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/ksh/ChangeLog,v 1.21 2005/03/27 09:45:16 taviso Exp $

*ksh-93.20050202 (27 Mar 2005)

  27 Mar 2005; Tavis Ormandy <taviso@gentoo.org> +ksh-93.20050202.ebuild:
  bump

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  01 Jan 2005; Joseph Jezak <josejx@gentoo.org> ksh-93.20040229.ebuild:
  Marked ~ppc.

  26 Oct 2004; Tavis Ormandy <taviso@gentoo.org> ksh-93.20040229.ebuild:
  use toolchain-funcs to determine compiler

  23 Oct 2004; Akinori Hattori <hattya@gentoo.org> ksh-93.20040229.ebuild:
  add ~ia64, bug #68321.

  05 Oct 2004; Bryan Østergaard <kloeri@gentoo.org> ksh-93.20040229.ebuild:
  Stable on alpha.

  23 Sep 2004; Tavis Ormandy <taviso@gentoo.org>
  +files/ksh-build-problems.diff, ksh-93.20040229.ebuild:
  attempting to fix #50000

  14 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org> ksh-93.20040229.ebuild:
  Stable on sparc

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> ksh-93.20030724.ebuild,
  ksh-93.20040229.ebuild:
  Add flag-o-matic for bug 49179

  15 Apr 2004; Michael McCabe <randy@gentoo.org> ksh-93.20040229.ebuild:
  adding s390 keywords

*ksh-93.20040229 (10 Apr 2004)

  10 Apr 2004; Tavis Ormandy <taviso@gentoo.org> ksh-93.20040229.ebuild:
  new release

  06 Dec 2003; Jason Wever <weeve@gentoo.org> ksh-93.20030724.ebuild:
  Marked stable on sparc, closes #25668

  02 Dec 2003; Tavis Ormandy <taviso@gentoo.org> ksh-93.20030724.ebuild:
  die if build script fails, no longer required to fail first.

  11 Oct 2003; Jason Wever <weeve@gentoo.org> ksh-93.20030724.ebuild:
  Added ~sparc keyword, resolves bug #25668.

  22 Sep 2003; <paul@gentoo.org> metadata.xml:
  Fix metadata.xml

  17 Sep 2003; Tavis Ormandy <taviso@gentoo.org> ksh-93.20030422.ebuild:
  removing old ebuilds.
