@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/ksh/Attic/ksh-93.20040229.ebuild,v 1.14 2004/12/31 13:58:07 josejx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/ksh/Attic/ksh-93.20040229.ebuild,v 1.15 2005/04/01 03:42:48 agriffis Exp $
 
 inherit ccc eutils flag-o-matic toolchain-funcs
 
@@ -13,7 +13,7 @@ SRC_URI="http://www.research.att.com/~gsf/download/tgz/INIT.${RELEASE}.tgz
 
 LICENSE="ATT"
 SLOT="0"
-KEYWORDS="x86 sparc alpha arm s390 ~ia64 ~ppc"
+KEYWORDS="x86 sparc alpha arm s390 ia64 ~ppc"
 IUSE="static nls"
 
 DEPEND="virtual/libc !app-shells/pdksh"
