@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/zsh-completion/Attic/zsh-completion-20050120.ebuild,v 1.4 2005/03/30 16:21:35 hansmi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/zsh-completion/Attic/zsh-completion-20050120.ebuild,v 1.5 2005/04/01 03:43:20 agriffis Exp $
 
 DESCRIPTION="Programmable Completion for zsh (includes emerge and ebuild commands)"
 HOMEPAGE="http://www.zsh.org/"
@@ -8,7 +8,7 @@ SRC_URI="http://dev.gentoo.org/~usata/distfiles/${P}.tar.gz"
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="x86 ppc ~sparc alpha ~arm hppa ~amd64 ~ia64 ppc-macos"
+KEYWORDS="x86 ppc ~sparc alpha ~arm hppa ~amd64 ia64 ppc-macos"
 IUSE=""
 
 DEPEND="app-shells/zsh"
