@@ -1,6 +1,10 @@
 # ChangeLog for app-shells/zsh-completion
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/zsh-completion/ChangeLog,v 1.8 2005/03/30 16:21:35 hansmi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/zsh-completion/ChangeLog,v 1.9 2005/04/01 03:43:20 agriffis Exp $
+
+  31 Mar 2005; Aron Griffis <agriffis@gentoo.org>
+  zsh-completion-20050120.ebuild:
+  stable on ia64
 
   30 Mar 2005; Michael Hanselmann <hansmi@gentoo.org>
   zsh-completion-20050120.ebuild:
